# ffi

./: Cargo.toml  cliff.toml  index.d.ts  index.js
algo/: Cargo.toml
algo/src/: algo.rs
node-binding/: Cargo.toml  index.d.ts  index.js  package.json
src/: lib.rs
